After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 754791 - Fix an error string and few minor things
Fix an error string and few minor things
Status: RESOLVED FIXED
Product: gvfs
Classification: Core
Component: google backend
git master
Other All
: Normal normal
: ---
Assigned To: Debarshi Ray
gvfs-maint
Depends on:
Blocks:
 
 
Reported: 2015-09-09 17:02 UTC by Debarshi Ray
Modified: 2016-06-29 11:25 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
google: Use the more appropriate method for setting errors (3.03 KB, patch)
2015-09-09 17:11 UTC, Debarshi Ray
rejected Details | Review
google: Fix the error string to respect the freeze and for consistency (1.00 KB, patch)
2015-09-09 17:12 UTC, Debarshi Ray
committed Details | Review

Description Debarshi Ray 2015-09-09 17:02:45 UTC
I thought I had not introduced any new strings, but I was wrong. "Can not create root directory" should be replaced with "Operation unsupported" to respect the string freeze and for consistency.
Comment 1 Debarshi Ray 2015-09-09 17:11:43 UTC
Created attachment 311010 [details] [review]
google: Use the more appropriate method for setting errors
Comment 2 Debarshi Ray 2015-09-09 17:12:09 UTC
Created attachment 311011 [details] [review]
google: Fix the error string to respect the freeze and for consistency
Comment 3 Ondrej Holy 2015-09-10 07:14:15 UTC
Review of attachment 311010 [details] [review]:

I do not see any reason for this patch (except consistency with the rest of the backend). Look at following declarations:

void g_vfs_job_failed_literal (GVfsJob *job, GQuark domain, gint code, const gchar  *message);
void g_vfs_job_failed (GVfsJob *job, GQuark domain, gint code, const gchar *format, ...);

So g_vfs_job_failed_literal looks more suitable for this task, g_vfs_job_failed_literal is called from g_vfs_job_failed anyway.

It makes sense to me to make patch to use g_vfs_job_failed_literal also in the rest of the code, but I don't think this is necessary...
Comment 4 Ondrej Holy 2015-09-10 07:15:10 UTC
Review of attachment 311011 [details] [review]:

This is ok...
Comment 5 Debarshi Ray 2015-09-10 10:33:36 UTC
Comment on attachment 311011 [details] [review]
google: Fix the error string to respect the freeze and for consistency

Thanks, Ondrej. Pushed to master.
Comment 6 Ondrej Holy 2015-09-30 07:30:03 UTC
This bug might be closed, mightn't be?