google: Fix the error string to respect the freeze and for consistency

https://bugzilla.gnome.org/show_bug.cgi?id=754791